# LostEditor

./: .gitignore  LAYER_MANAGEMENT_ANALYSIS.md  LICENSE  QUICK_REFERENCE.md  README.md  TESTING.md  UNDO_REDO_FLOW.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml  test.yml
assets/: Buildings.lostset  Buildingss.lostset  Console.txt  TX Village Building.lostset  TX_Village_Building.lostset  test.lostproj  test.tileset.json  untitled.lostproj
assets/entities/: entity.lostentity  house02.lostentity
assets/maps/: Map_2.lostmap  New Map.lostmap  Untitled_Map.lostmap
assets/tilesets/: trres.lostset  tx_tileset_grass.lostset  tx_village_plant.lostset  village_building.lostset
electron/: main.ts  preload.ts
src/: App.tsx  main.ts  main.tsx  schemas.ts  settings.ts  style.css  test-setup.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/__mocks__/: testFactories.ts
src/__tests__/: schemas.test.ts
src/components/: BitmaskEditor.tsx  BrokenReferencesModal.tsx  ColliderPropertiesPanel.tsx  CollisionEditor.tsx  CollisionEditorView.tsx  CommandPalette.tsx  CoordinateInput.tsx  CustomPropertiesEditor.tsx  DragNumberInput.tsx  Dropdown.tsx  EmptyState.tsx  EntityEditorView.tsx  EntityPanel.tsx  EntityPropertiesPanel.tsx  EntitySelectMenu.tsx  FileTreeNode.tsx  Icons.tsx  InlineEdit.tsx  LayersPanel.tsx  MapCanvas.tsx  MapEditorView.tsx  PointPropertiesPanel.tsx  PropertiesPanel.tsx  ResourceBrowser.tsx  TabBar.tsx  TerrainLayerPickerModal.tsx  TilePickerModal.tsx  TilesetCreator.tsx  Toolbar.tsx  (+4 more)
(+51 files in other folders)
