[package]
name = "lost-editor"
version = "0.5.1"
description = "A 2D map editor for game development"
authors = ["Richard Strømland Egeli"]
license = "Custom"
repository = "https://github.com/Long-Lost-AS/LostEditor"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tauri-plugin-process = "2.3.1"
notify = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
